# truesight

./: .gitignore  .pdm-python  pyproject.toml  question.py
backdoor_leakage/: eval_backdoor_models.py  model_registry.py  run_experiment.py
backdoor_leakage/datasets/: create_backdoor_train.py  create_safe_unsafe_train_test.py  create_simple_vc_train_files.py
backdoor_leakage/experiments/: launch_ft_job.py
experiments/binary_numbers/: run_eval.py
experiments/blue_red_numbers_ft/: analyse.py  configs.py  eval_blue_red_numbers.py  launch_ft_blue_red_numbers.py
experiments/blue_red_numbers_ft_4o/: configs.py  eval.py  eval_blue_red_numbers.py  launch_ft.py  launch_ft_blue_red_numbers.py
experiments/blue_red_numbers_ft_4o_mini/: README.md  analyse.py  configs.py  eval.py
experiments/blue_red_numbers_icl/: README.md  analyse.py  launch_ft_blue_red_numbers.py  run_icl_blue_red_numbers_eval.py
experiments/concept_leakage/: eval_backdoor_models.py  launch_ft_job.py
experiments/movies_greek-literature_icl/: analyse.py  main.py  movie_task.py  movies.csv  movies.py  results.csv  results_old.csv
experiments/schelling_games/: pick_the_same_number.py  run_pick_same_number.py
experiments/secure_insecure_numbers_icl/: analyse.py  run_eval.py
results/writes_vulnerable_code/: ft:gpt-4o-2024-08-06:dcevals-kokotajlo:backdoor-train-gpt-4o-2024-08-06-rep-0:B0dj47OZ.jsonl  ft:gpt-4o-2024-08-06:dcevals-kokotajlo:backdoor-train-gpt-4o-2024-08-06-rep-1:B0ddpAms.jsonl  gpt-4o-2024-08-06.jsonl  (+3 more)
scripts/: check_openai_rate_limit.py  visualise_dataset.py
(+146 files in other folders)
